# torch-metadyn

./: README.md
metadyn_project/: pyproject.toml
metadyn_project/examples/: noisy_vae_demo.py
metadyn_project/metadyn/: __init__.py  kernel.py
metadyn_project/torch_metadyn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
